--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,22 +4,45 @@
 @import "src/styles/abstract/placeholder";
 @import "styles/base/base";
 
-body {
-  margin: 0;
+// body {
+//   margin: 0;
+// }
+
+// * {
+//   margin: 0;
+//   margin-block: 0;
+//   box-sizing: content-box;
+// }
+
+// html,
+// body {
+//   height: 100%;
+// }
+
+// body {
+//   margin: 0;
+//   font-family: Roboto, "Helvetica Neue", sans-serif;
+// }
+
+:root {
+  /* https://getbootstrap.com/docs/5.3/customize/css-variables/ */
+  --bs-body-bg: #53777A;
+  --bs-body-color: #ECD078;
+  --bs-body-font-family: 'Oswald', sans-serif;
+  --bs-body-font-size: 1.4rem;
+  --bs-link-color: var(--bs-body-color);
 }
 
-* {
-  margin: 0;
-  margin-block: 0;
-  box-sizing: content-box;
+.nav-pills {
+  --bs-nav-pills-link-active-color: var(--bs-body-bg);
+  --bs-nav-pills-link-active-bg: var(--bs-body-color);
 }
 
-html,
-body {
-  height: 100%;
+.list-group {
+  --bs-list-group-bg: transparent;
 }
 
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+.list-group-item {
+  --bs-list-group-border-color: var(--bs-body-color);
+  --bs-list-group-color: var(--bs-body-color);
 }
