feat: add children hooks

--- a/src/app/app-comp/app-comp.component.html
+++ b/src/app/app-comp/app-comp.component.html
@@ -1,3 +1,4 @@
 <p>app-comp works!</p>
 <h4>Message: {{o.name}}, d= {{o.d.a[0]}}</h4>
-<app-comp2 [o2]="o2"></app-comp2>
+<!-- <app-comp2 [o2]="o2"></app-comp2> -->
+<app-comp2></app-comp2>
