--- a/src/app/component/add-zip/add-zip.component.html
+++ b/src/app/component/add-zip/add-zip.component.html
@@ -4,7 +4,7 @@
       <input type="text" #zipcode placeholder="Add ZIP, please">
     </div>
     <div>
-      <button btn btn-primery (click)="addZip(zipcode.value)">Add ZIP</button>
+      <button class="btn btn-primary" (click)="addZip(zipcode.value)">Add ZIP</button>
     </div>
   </div>
   <div>
