feat: current-condition first steps

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>Hello Angular 16</h1>
 <app-add-zip></app-add-zip>
+<app-current-conditions></app-current-conditions>
 <router-outlet></router-outlet>
